# iCloudArchiver

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-19-icloud-archiver.md
docs/superpowers/specs/: 2026-05-19-icloud-archiver-design.md
src/icloud_archiver/: __init__.py  auth.py  catalog.py  cli.py  config.py  deleter.py  downloader.py  icloud_iface.py  journal.py  orchestrator.py  organizer.py  preflight.py  reporting.py  selector.py  types.py  verifier.py
tests/: fakes.py  fixtures.py  test_auth.py  test_catalog.py  test_cli.py  test_config.py  test_deleter.py  test_downloader.py  test_fake_icloud.py  test_journal.py  test_orchestrator.py  test_organizer.py  test_preflight.py  test_reporting.py  test_selector.py  test_types.py  test_verifier.py
tests/manual/: README.md
