[project]
name = "icloud-archiver"
version = "0.1.0"
description = "Archive the oldest iCloud Photos to an external drive, then delete from iCloud."
requires-python = ">=3.11"
dependencies = [
    "pyicloud-ipd>=0.10.0",
    "icloudpd>=1.20.0",
    "click>=8.1.7",
    "tqdm>=4.66.0",
    "structlog>=24.1.0",
    "keyring>=23.13.1",
    "Pillow>=10.2.0",
    "python-ulid>=2.7.0",
]

[project.scripts]
icloud-archiver = "icloud_archiver.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/icloud_archiver"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.mypy]
strict = true
python_version = "3.11"
packages = ["icloud_archiver"]
mypy_path = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
